--- a/LoCyanFrpDesktop/MainWindow.xaml
+++ b/LoCyanFrpDesktop/MainWindow.xaml
@@ -1,24 +1,42 @@
-﻿<Window x:Class="LoCyanFrpDesktop.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LoCyanFrpDesktop"
-        ResizeMode="NoResize"
+        xmlns:hc="https://handyorg.github.io/handycontrol" x:Class="LoCyanFrpDesktop.MainWindow"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="LoCyanFrp-Desktop" Height="354" Width="800">
-    <Grid Margin="0,-4,0,-1">
-        <Label Content="账号" HorizontalAlignment="Left" Height="44" Margin="80,60,0,0" VerticalAlignment="Top" Width="70" FontSize="20" BorderBrush="#00000000"/>
-        <Label Content="密码" HorizontalAlignment="Left" Height="38" Margin="80,134,0,0" VerticalAlignment="Top" Width="70" FontSize="20" BorderBrush="#00000000"/>
-        <TextBox x:Name="txtusername" HorizontalAlignment="Left" Margin="232,67,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="479" Height="38" FontSize="18"/>
-        <PasswordBox x:Name="txtpassword" HorizontalAlignment="Left" Margin="232,138,0,0" VerticalAlignment="Top" Width="479" Height="38" FontSize="18"/>
-        <Grid Margin="57,227,57,57" RenderTransformOrigin="0.373,0.58">
+        WindowStyle="None"
+        AllowsTransparency="True"
+        Title="LoCyanFrp-Desktop" Height="800" Width="1275">
+    <Grid Margin="0,0,0,20">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="37*"/>
+            <ColumnDefinition Width="218*"/>
+        </Grid.ColumnDefinitions>
+        <Grid RenderTransformOrigin="0.373,0.58" Grid.ColumnSpan="2" Margin="0,0,0,-20">
+            <Grid.Background>
+                <ImageBrush ImageSource="/Resource/background.jpg"/>
+            </Grid.Background>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="640*"/>
+                <ColumnDefinition Width="297*"/>
                 <ColumnDefinition Width="338"/>
             </Grid.ColumnDefinitions>
-            <Button Content="登录" HorizontalAlignment="Left" Width="186" Click="Button_Click_1" FontSize="20" Margin="250,0,0,0" Grid.ColumnSpan="2" Height="40" BorderBrush="#FF6B6A6A"/>
+            <Grid HorizontalAlignment="Left" Height="800" VerticalAlignment="Center" Width="385" Opacity="0.7" Background="White">
+                <Label Content="LoCyanFrp" Margin="0,20,0,0" VerticalAlignment="Top" FontFamily="Microsoft YaHei" FontSize="15" Height="35" Width="125" Background="#00000000" BorderBrush="#00000000"/>
+            </Grid>
+            <Grid HorizontalAlignment="Left" Height="374" Margin="10,0,0,0" VerticalAlignment="Center" Width="375">
+                <Grid HorizontalAlignment="Center" Height="226" VerticalAlignment="Top" Width="385" Margin="0,150,0,0" Opacity="0.6">
+                    <Label Content="账号" HorizontalAlignment="Left" VerticalAlignment="Top" Width="55" FontSize="12" BorderBrush="#00000000" Background="#00000000" Foreground="Black" Height="30"/>
+                    <Label Content="密码" HorizontalAlignment="Left" Height="38" Margin="0,59,0,0" VerticalAlignment="Top" Width="55" FontSize="12" BorderBrush="#00000000" Background="#00000000" Foreground="Black"/>
+                    <TextBox x:Name="txtusername" HorizontalAlignment="Left" Margin="62,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="293" Height="5" FontSize="12"/>
+                    <PasswordBox x:Name="txtpassword" HorizontalAlignment="Left" Margin="62,59,0,0" VerticalAlignment="Top" Width="293" Height="15" FontSize="12"/>
+                    <Button Content="登录" Width="178" Click="Button_Click_1" FontSize="20" Height="42" BorderBrush="#FF6B6A6A" Margin="102,135,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+                </Grid>
+                <hc:ImageBlock HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" Source="/Resource/favicon.ico" RenderTransformOrigin="-0.2,-0.752" Margin="150,0,0,0"/>
+            </Grid>
+            <Button Content="×" Margin="303,0,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Foreground="Red" Click="Button_Click" Grid.Column="2" HorizontalAlignment="Left" Height="34" Width="35" FontSize="20"/>
         </Grid>
     </Grid>
 
