--- a/LoCyanFrpDesktop/MainWindow.xaml
+++ b/LoCyanFrpDesktop/MainWindow.xaml
@@ -1,43 +1,123 @@
-﻿<Window
+﻿<ui:UiWindow
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:hc="https://handyorg.github.io/handycontrol" x:Class="LoCyanFrpDesktop.MainWindow"
+        xmlns:hc="https://handyorg.github.io/handycontrol" 
+        x:Class="LoCyanFrpDesktop.MainWindow"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        WindowStyle="None"
-        AllowsTransparency="True"
-        Title="LoCyanFrp-Desktop" Height="800" Width="1275">
-    <Grid Margin="0,0,0,20">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="37*"/>
-            <ColumnDefinition Width="218*"/>
-        </Grid.ColumnDefinitions>
-        <Grid RenderTransformOrigin="0.373,0.58" Grid.ColumnSpan="2" Margin="0,0,0,-20">
-            <Grid.Background>
-                <ImageBrush ImageSource="/Resource/background.jpg"/>
-            </Grid.Background>
+        Title="LoCyanFrp-Desktop" Height="500" Width="900" 
+        Closing="UiWindow_Closing"
+ContentRendered="UiWindow_ContentRendered"
+ExtendsContentIntoTitleBar="True"
+Icon="/Resource/favicon.ico"
+IsVisibleChanged="UiWindow_IsVisibleChanged"
+Loaded="UiWindow_Loaded"
+AllowDrop="True"
+StateChanged="UiWindow_StateChanged"
+Background="Transparent"
+WindowBackdropType="Mica"
+WindowCornerPreference="Round"
+WindowStyle="None">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            x:Name="_TitleBar"
+            Title="LoCyanFrp"
+            Grid.Row="0"
+            Margin="5,0,0,0"
+            Padding="0"
+            Height="30"
+            Icon="/Resource/favicon.ico">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+         x:Name="NotifyIcon"
+         FocusOnLeftClick="True"
+         Icon="/Resource/favicon.ico"
+         MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <ui:MenuItem
+                     Click="Hide_Click"
+                     Header="隐藏窗口"
+                     SymbolIcon="SlideHide24" />
+                            
+                            <ui:MenuItem
+                     Click="Exit_Click"
+                     Header="退出"
+                     SymbolIcon="ArrowExit20" />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="640*"/>
-                <ColumnDefinition Width="297*"/>
-                <ColumnDefinition Width="338"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto" MinWidth="300"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Grid HorizontalAlignment="Left" Height="800" VerticalAlignment="Center" Width="385" Opacity="0.7" Background="White">
-                <Label Content="LoCyanFrp" Margin="0,20,0,0" VerticalAlignment="Top" FontFamily="Microsoft YaHei" FontSize="15" Height="35" Width="125" Background="#00000000" BorderBrush="#00000000"/>
-            </Grid>
-            <Grid HorizontalAlignment="Left" Height="374" Margin="10,0,0,0" VerticalAlignment="Center" Width="375">
-                <Grid HorizontalAlignment="Center" Height="226" VerticalAlignment="Top" Width="385" Margin="0,150,0,0" Opacity="0.6">
-                    <Label Content="账号" HorizontalAlignment="Left" VerticalAlignment="Top" Width="55" FontSize="12" BorderBrush="#00000000" Background="#00000000" Foreground="Black" Height="30"/>
-                    <Label Content="密码" HorizontalAlignment="Left" Height="38" Margin="0,59,0,0" VerticalAlignment="Top" Width="55" FontSize="12" BorderBrush="#00000000" Background="#00000000" Foreground="Black"/>
-                    <TextBox x:Name="txtusername" HorizontalAlignment="Left" Margin="62,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="293" Height="5" FontSize="12"/>
-                    <PasswordBox x:Name="txtpassword" HorizontalAlignment="Left" Margin="62,59,0,0" VerticalAlignment="Top" Width="293" Height="15" FontSize="12"/>
-                    <Button Content="登录" Width="178" Click="Button_Click_1" FontSize="20" Height="42" BorderBrush="#FF6B6A6A" Margin="102,135,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+            <Grid Grid.Column="1" >
+                <Grid Height="400" VerticalAlignment="center">
+                    <Grid Grid.Row="1" Grid.Column="1">
+                        <GroupBox Header="登录" FontSize="16">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="80"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="220"/>
+                                    <RowDefinition Height="*" MinHeight="16"/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="1" Text="LocyanFrp" FontSize="48" HorizontalAlignment="Center"/>
+                                <Grid Grid.Row="3">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="auto"/>
+                                        <RowDefinition Height="auto"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <GroupBox Grid.Row="0" Margin="20,0,20,10" Header="用户名" FontSize="12">
+                                        <TextBox Grid.Row="0" Margin="5" MinHeight="40" VerticalAlignment="Center" ToolTip="用户名" Name="Username"/>
+                                    </GroupBox>
+
+                                    <GroupBox Grid.Row="1" Margin="20,10" Header="密码" FontSize="12">
+                                        <PasswordBox Grid.Row="1" Margin="5" MinHeight="40" VerticalAlignment="Center" ToolTip="密码" Name="Password"/>
+                                    </GroupBox>
+
+                                    <ui:Button Grid.Row="2" Content="登录" Height="40" Width="200" VerticalAlignment="Center" HorizontalAlignment="Center" Name="_Login" Click="Login_Click"/>
+                                </Grid>
+                                <Grid Grid.Row="4">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" Name="Register" FontSize="12" Text="" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Hyperlink NavigateUri="https://preview.locyanfrp.cn/register" RequestNavigate="Register_Navigate">
+                        没有账号? 前往注册
+                    </Hyperlink>
+                                    </TextBlock>
+                                    <TextBlock Grid.Column="1" Name="ForgetPassword" FontSize="12" Text="" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Hyperlink NavigateUri="https://preview.locyanfrp.cn/reset_password" RequestNavigate="ForgetPassword_Navigate">
+                        忘记密码?
+                    </Hyperlink>
+                                    </TextBlock>
+                                </Grid>
+                            </Grid>
+
+
+                        </GroupBox>
+                    </Grid>
                 </Grid>
-                <hc:ImageBlock HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" Source="/Resource/favicon.ico" RenderTransformOrigin="-0.2,-0.752" Margin="150,0,0,0"/>
+
             </Grid>
-            <Button Content="×" Margin="303,0,0,0" VerticalAlignment="Top" Background="#00000000" BorderBrush="#00000000" Foreground="Red" Click="Button_Click" Grid.Column="2" HorizontalAlignment="Left" Height="34" Width="35" FontSize="20"/>
         </Grid>
+        
+    
     </Grid>
 
-</Window>
+</ui:UiWindow>
