Ver 2.0.0-A1: Part Rewrite the GUI of Dashboard.

--- a/LoCyanFrpDesktop/DashBoard.xaml
+++ b/LoCyanFrpDesktop/DashBoard.xaml
@@ -1,13 +1,80 @@
-﻿<Window x:Class="LoCyanFrpDesktop.DashBoard"
+﻿<ui:UiWindow x:Class="LoCyanFrpDesktop.DashBoard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LoCyanFrpDesktop"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+        xmlns:local="clr-namespace:LoCyanFrpDesktop"   
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="LoCyanFrp - DashBoard [用户界面]" Height="555" Width="978">
-    <Grid Margin="0,0,0,-5">
+        Title="LoCyanFrp - DashBoard [用户界面]"
+Height="500" Width="800" 
+    MinHeight="450"
+    MinWidth="800"
+        Closing="UiWindow_Closing"
+ContentRendered="UiWindow_ContentRendered"
+
+Icon="/Resource/favicon.ico"
+IsVisibleChanged="UiWindow_IsVisibleChanged"
+Loaded="UiWindow_Loaded"
+AllowDrop="True"
+    ExtendsContentIntoTitleBar="True"
+StateChanged="UiWindow_StateChanged"
+    Style="{StaticResource UiWindow}"
+WindowStyle="None">
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+    x:Name="_TitleBar"
+    Title="LoCyanFrp - DashBoard [用户界面]"
+    Grid.Row="0"
+    Margin="5,0,0,0"
+    Padding="0"
+    Icon="/Resource/favicon.ico">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+ x:Name="NotifyIcon"
+ FocusOnLeftClick="True"
+ Icon="/Resource/favicon.ico"
+ MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <ui:MenuItem
+             Click="Hide_Click"
+             Header="隐藏窗口"
+             SymbolIcon="SlideHide24" />
+
+                            <ui:MenuItem
+             Click="Exit_Click"
+             Header="退出"
+             SymbolIcon="ArrowExit20" />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid Grid.Row="1" Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" MinWidth="220" HorizontalAlignment="Left">
+                <Border Background="Gray" CornerRadius="10">
+                    <Border.Effect>
+                        <DropShadowEffect Color="{DynamicResource ShadowColor}" ShadowDepth="0" BlurRadius="20" Opacity="0.5"/>
+                    </Border.Effect>
+                    <TextBlock Name="title_username" FontSize="28" Text="欢迎回来，" VerticalAlignment="Center" Margin="10,0,10,0"/>
+                </Border>
+            </Grid>
+        </Grid>
+
+        <!--<Grid Grid.Row="1">
+            
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="55*"/>
             <ColumnDefinition Width="923*"/>
@@ -24,6 +91,7 @@
             <Label Content="鉴定为" HorizontalAlignment="Left" Margin="34,0,0,0" FontSize="50" Width="172" Height="76" FontFamily="Microsoft YaHei" BorderBrush="#00000000" Grid.ColumnSpan="2"/>
             <Label x:Name="title_username" Content="Administrator" HorizontalAlignment="Left" Margin="171,20,0,0" FontSize="25" Width="714" Height="55" FontFamily="Microsoft YaHei" BorderBrush="#00000000" Grid.Column="1" Grid.RowSpan="2" VerticalAlignment="Top"/>
         </Grid>
+        </Grid>
         <TabControl Margin="0,105,0,0" Grid.ColumnSpan="2">
             <TabItem Header="隧道列表" HorizontalAlignment="Left" Margin="-2,-2,0,0" Width="72" FontFamily="Microsoft YaHei">
                 <Grid Background="White" Margin="0,0,-3,0">
@@ -36,9 +104,7 @@
                     <Grid Grid.ColumnSpan="4" Margin="0,0,3,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
-                            <!-- First column takes remaining space -->
                             <ColumnDefinition Width="Auto"/>
-                            <!-- Second column is auto-sized for the button -->
                         </Grid.ColumnDefinitions>
                         <ListBox x:Name="proxies_list" ItemsSource="{Binding Proxies}" Margin="5,5,40,5" Grid.Column="0" SelectionChanged="Proxies_List_SelectionChanged" d:ItemsSource="{d:SampleData ItemCount=5}" Background="White" BorderBrush="Black" FontFamily="Microsoft YaHei"/>
                         <Button Content="启动隧道" FontSize="20" Click="Button_Click" Grid.Column="1" HorizontalAlignment="Left" Height="69" Margin="10,0,50,0" IsDefault="True" FontFamily="Microsoft YaHei"/>
@@ -58,7 +124,7 @@
                     <Label Content="LoCyanFrp - https://www.locyanfrp.cn" Margin="216,319,0,0" VerticalAlignment="Top" Width="534" FontSize="15" FontFamily="Microsoft YaHei" BorderBrush="#00000000" Height="35" HorizontalAlignment="Left"/>
                 </Grid>
             </TabItem>
-        </TabControl>
+        </TabControl>-->
 
     </Grid>
-</Window>
+</ui:UiWindow>
