--- a/LoCyanFrpDesktop/DashBoard.xaml
+++ b/LoCyanFrpDesktop/DashBoard.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        xmlns:local="clr-namespace:LoCyanFrpDesktop"   
+        xmlns:local="clr-namespace:LoCyanFrpDesktop" 
+        xmlns:Dashboard="clr-namespace:LoCyanFrpDesktop.Dashboard"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="LoCyanFrp - DashBoard [用户界面]"
@@ -24,6 +25,10 @@ StateChanged="UiWindow_StateChanged"
 WindowStyle="None">
 
     <Grid>
+        <Grid.Resources>
+            <Color x:Key="ShadowColor"></Color>
+            <SolidColorBrush x:Key="MainBackgroundColor"></SolidColorBrush>
+        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
@@ -57,18 +62,36 @@ WindowStyle="None">
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <Grid Grid.Row="1" Margin="20">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0" MinWidth="220" HorizontalAlignment="Left">
-                <Border Background="Gray" CornerRadius="10">
-                    <Border.Effect>
-                        <DropShadowEffect Color="{DynamicResource ShadowColor}" ShadowDepth="0" BlurRadius="20" Opacity="0.5"/>
-                    </Border.Effect>
-                    <TextBlock Name="title_username" FontSize="28" Text="欢迎回来，" VerticalAlignment="Center" Margin="10,0,10,0"/>
-                </Border>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <ui:NavigationStore 
+                x:Name="Navigation"
+                Grid.Column="0"
+                Margin="6,0,6,0"
+                Frame="{Binding ElementName=RootFrame}"
+                SelectedPageIndex="0">
+                <ui:NavigationStore.Items>
+                    <ui:NavigationItem
+                            Content="开始"
+                            Icon="Home24"
+                            PageTag="ProxyList"
+                            PageType="{x:Type Dashboard:ProxyList}" />
+                    <ui:NavigationSeparator />
+                        
+                </ui:NavigationStore.Items>
+            </ui:NavigationStore>
+            <Border
+                Grid.Column="1"
+                Margin="0"
+                
+                CornerRadius="8,0,0,0">
+                <Frame x:Name="RootFrame" Margin="4,8" />
+            </Border>
+            <Grid Grid.Column="1">
+            
             </Grid>
         </Grid>
 
