--- a/LoCyanFrpDesktop/Dashboard/Status.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Status.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LoCyanFrpDesktop.Dashboard.Info"
+﻿<Page x:Class="LoCyanFrpDesktop.Dashboard.Status"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:LoCyanFrpDesktop.Dashboard"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Info">
+      Title="Status">
 
     <Grid>
         
