--- a/LoCyanFrpDesktop/MainWindow.xaml
+++ b/LoCyanFrpDesktop/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<ui:UiWindow
+        x:Class="LoCyanFrpDesktop.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,19 +9,18 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="LoCyanFrp-Desktop" Height="500" Width="800" 
-    MinHeight="450"
-    MinWidth="800"
+        MinHeight="450"
+        MinWidth="800"
         Closing="UiWindow_Closing"
-ContentRendered="UiWindow_ContentRendered"
-
-Icon="/Resource/favicon.ico"
-IsVisibleChanged="UiWindow_IsVisibleChanged"
-Loaded="UiWindow_Loaded"
-AllowDrop="True"
-    ExtendsContentIntoTitleBar="True"
-StateChanged="UiWindow_StateChanged"
-    Style="{StaticResource UiWindow}"
-WindowStyle="None">
+        ContentRendered="UiWindow_ContentRendered"
+        Icon="/Resource/favicon.ico"
+        IsVisibleChanged="UiWindow_IsVisibleChanged"
+        Loaded="UiWindow_Loaded"
+        AllowDrop="True"
+        ExtendsContentIntoTitleBar="True"
+        StateChanged="UiWindow_StateChanged"
+        Style="{StaticResource UiWindow}"
+        WindowStyle="None">
     <Grid>
         <Grid.Resources>
             <Color x:Key="ShadowColor"></Color>
