Ver 2.0.0-A1: Almost Finished

--- a/LoCyanFrpDesktop/Dashboard/Status.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Status.xaml
@@ -1,4 +1,5 @@
-﻿<Page x:Class="LoCyanFrpDesktop.Dashboard.Status"
+﻿<ui:UiPage  xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
+            x:Class="LoCyanFrpDesktop.Dashboard.Status"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,6 +10,12 @@
       Title="Status">
 
     <Grid>
-        
+        <RichTextBox Name="LogOutput" 
+                     Margin="20" 
+                     VerticalAlignment="Stretch" 
+                     HorizontalAlignment="Stretch" 
+                     IsReadOnly="True"
+                     IsUndoEnabled="False"
+                     UndoLimit="0"/>
     </Grid>
-</Page>
+</ui:UiPage>
