--- a/LoCyanFrpDesktop/Dashboard/ProxyList.xaml
+++ b/LoCyanFrpDesktop/Dashboard/ProxyList.xaml
@@ -10,32 +10,55 @@
       Title="ProxyList">
 
     <Grid>
+        <Grid.Resources>
+            <SolidColorBrush x:Key="BorderColor"/>
+        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" MinWidth="220" HorizontalAlignment="Left">
-            <Border Name="UsernameDisplay" Background="{DynamicResource MainBackgroundColor}" CornerRadius="10">
-                <Border.Effect>
-                    <DropShadowEffect Color="{DynamicResource ShadowColor}" ShadowDepth="0" BlurRadius="20" Opacity="0.5"/>
-                </Border.Effect>
-                <TextBlock Name="title_username" FontSize="28" Text="欢迎回来，" VerticalAlignment="Center" Margin="10,0,10,0"/>
-            </Border>
+        <Grid Grid.Row="0" HorizontalAlignment="Left">
+            <TextBlock VerticalAlignment="Center" Text="隧道列表" FontSize="22" Margin="10,0,10,0" />
         </Grid>
         <Grid Grid.Row="1">
-            <Border Name="ProxyListDisplay" Background="{DynamicResource MainBackgroundColor}" CornerRadius="10">
-                <Border.Effect>
-                    <DropShadowEffect Color="{DynamicResource ShadowColor}" ShadowDepth="0" BlurRadius="20" Opacity="0.5"/>
-                </Border.Effect>
-            </Border>
-            <ListView ItemsSource="{Binding Proxies}" SelectionChanged="Proxies_List_SelectionChanged" Name="proxies_list"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10" ContextMenuOpening="ListView_ContextMenuOpening" MouseDown="ListView_MouseDown">
-                <ListView.ContextMenu>
-                    <ContextMenu Name="ListMenu">
-                        <ui:MenuItem />
-                    </ContextMenu>
-                </ListView.ContextMenu>
-            </ListView>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="100"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" Margin="2">
+                <ListView SelectionChanged="Proxies_List_SelectionChanged" Name="proxies_list"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" ContextMenuOpening="ListView_ContextMenuOpening" MouseDown="ListView_MouseDown">
+                    <ListView.ContextMenu>
+                        <ContextMenu Name="ListMenu">
+                            <ui:MenuItem Header="刷新" Click="Refresh_Click"/>
+                            <Separator/>
+                            <ui:MenuItem Header="新建隧道" Click="CreateNewProxy_Click"/>
+                            <ui:MenuItem Header="删除隧道" Click="DeleteProxy_Click"/>
+                            <Separator/>
+                            <ui:MenuItem Header="启动隧道" Click="StartProxy_Click"/>
+                            <ui:MenuItem Header="停止隧道" Click="StopProxy_Click"/>
+                        </ContextMenu>
+                    </ListView.ContextMenu>
+                </ListView>
+                
+            </Grid>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <ui:Card Grid.Column="0" Padding="10">
+                    <StackPanel>
+                        <DockPanel>
+                            <TextBlock Name="title_username" Text="欢迎回来，"/>
+                        </DockPanel>
+                    </StackPanel>
+                    <ui:Card.Footer>
+                        <TextBlock Text="PS:右键隧道可以打开菜单哦喵~" />
+                    </ui:Card.Footer>   
+                </ui:Card>
+            </Grid>
         </Grid>
+        
     </Grid>
 </ui:UiPage>
