--- a/LoCyanFrpDesktop/Dashboard/Settings.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Settings.xaml
@@ -1,4 +1,5 @@
-﻿<Page x:Class="LoCyanFrpDesktop.Dashboard.Settings"
+﻿<ui:UiPage  xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
+            x:Class="LoCyanFrpDesktop.Dashboard.Settings"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +9,44 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Settings">
 
-    <Grid>
-        
+    <Grid Margin="5">
+        <Border
+            Grid.Column="1"
+            Margin="0"
+            Padding="10,5"
+            Background="{DynamicResource ControlFillColorDefaultBrush}"
+            CornerRadius="8">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="65"/>
+                    
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <TextBlock FontSize="32" Text="对，我还没想好设置要写点什么"/>
+                    
+                </Grid>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
+                        <StackPanel>
+                            <TextBlock Name="_BuildInfo"  TextWrapping="Wrap" />
+                        </StackPanel>
+                    </Grid>
+                    <Grid Grid.Column="2" HorizontalAlignment="Right">
+                        <StackPanel>
+                            <TextBlock Name="_Version"/>
+                            <TextBlock Name="_Developer"/>
+                            <TextBlock Name="_Copyright"/>
+                        </StackPanel>
+                        
+                    </Grid>
+                </Grid>
+            </Grid>
+        </Border>
     </Grid>
-</Page>
+</ui:UiPage>
