Ver 2.0.0-Alpha2: Fixed a lot of the bugs.
What's next?

--- a/LoCyanFrpDesktop/MainWindow.xaml
+++ b/LoCyanFrpDesktop/MainWindow.xaml
@@ -38,10 +38,11 @@
             Icon="/Resource/favicon.ico">
             <ui:TitleBar.Tray>
                 <ui:NotifyIcon
-         x:Name="NotifyIcon"
-         FocusOnLeftClick="True"
-         Icon="/Resource/favicon.ico"
-         MenuOnRightClick="True">
+                    x:Name="NotifyIcon"
+                    Icon="/Resource/favicon.ico"
+                    MenuOnRightClick="True"
+                    FocusOnLeftClick="False"
+                    LeftClick="NotifyIcon_LeftClick">
                     <ui:NotifyIcon.Menu>
                         <ContextMenu>
                             <ui:MenuItem
