--- a/LoCyanFrpDesktop/Dashboard/Settings.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Settings.xaml
@@ -18,15 +18,40 @@
             CornerRadius="8">
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="80"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="65"/>
                     
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
-                    <TextBlock FontSize="32" Text="对，我还没想好设置要写点什么"/>
+                    <StackPanel>
+                        <StackPanel.Resources>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="Margin" Value="0,15,0,5" />
+                            </Style>
+                        </StackPanel.Resources>
+                        <TextBlock Text="Frpc路径"/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox Name="FrpcPath" 
+                                IsReadOnly="True"
+                                ToolTip="服务端的启动路径" />
+                            <ui:Button
+                                x:Name="Select"
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                Click="Select_Click"
+                                Content="选择文件"
+                                Icon="OpenFolder24"/>
+                        </Grid>
+                        
+                    </StackPanel>
                     
                 </Grid>
-                <Grid Grid.Row="1">
+                <Grid Grid.Row="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="*"/>
