Ver 2.0.0-Beta1: Okay, I think this should work.
YEAH, I "think"

--- a/LoCyanFrpDesktop/Dashboard/Settings.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Settings.xaml
@@ -38,6 +38,7 @@
                             </Grid.ColumnDefinitions>
                             <TextBox Name="FrpcPath" 
                                 IsReadOnly="True"
+                                     Text=" "
                                 ToolTip="服务端的启动路径" />
                             <ui:Button
                                 x:Name="Select"
