--- a/LoCyanFrpDesktop/Dashboard/Status.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Status.xaml
@@ -16,6 +16,8 @@
                      HorizontalAlignment="Stretch" 
                      IsReadOnly="True"
                      IsUndoEnabled="False"
-                     UndoLimit="0"/>
+                     UndoLimit="0"
+                     FontSize="12"
+                     />
     </Grid>
 </ui:UiPage>
