--- a/LoCyanFrpDesktop/DashBoard.xaml
+++ b/LoCyanFrpDesktop/DashBoard.xaml
@@ -77,12 +77,22 @@
             <Border
                 Grid.Column="1"
                 Margin="0"
-                
                 CornerRadius="8,0,0,0">
                 <Frame x:Name="RootFrame" Margin="4,8" />
             </Border>
-            <Grid Grid.Column="1">
             
+            <Grid Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <ui:Snackbar
+                    Margin="0,0,0,20"
+                    x:Name="Snackbar"
+                    Grid.Column="1"
+                    Panel.ZIndex="999"
+                    Timeout="5000" />
             </Grid>
         </Grid>
 
