--- a/LoCyanFrpDesktop/Dashboard/Status.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Status.xaml
@@ -9,29 +9,44 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Status">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="auto"/>
-        </Grid.RowDefinitions>
-        <RichTextBox Name="LogOutput" 
-                     Grid.Row="0"
-                     Margin="20,20,20,20" 
-                     VerticalAlignment="Stretch" 
-                     HorizontalAlignment="Stretch" 
-                     IsReadOnly="True"
-                     IsUndoEnabled="False"
-                     UndoLimit="0"
-                     FontSize="12"
-                     />
-        <ui:Button
-            Grid.Row="1" 
-            Name="StopAllProxies"
-            Click="StopAllProxies_Click"
-            Margin="20,0,0,10"
-            Icon="Stop24"
-            >强制结束所有隧道
-
-        </ui:Button>
+    <Grid >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Margin="20,20,0,15">
+            <Border
+                 Grid.Column="1"
+                 Margin="0"
+                 Padding="10,5"
+                 Background="{DynamicResource ControlFillColorDefaultBrush}"
+                 CornerRadius="8">
+                <ListView Name="ProxiesStarted"/>
+            </Border>
+        </Grid>
+        <Grid Grid.Column="1" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <RichTextBox Name="LogOutput" 
+                         Margin="20,20,20,20" 
+                         Grid.Row="0"
+                         VerticalAlignment="Stretch" 
+                         HorizontalAlignment="Stretch" 
+                         IsReadOnly="True"
+                         IsUndoEnabled="False"
+                         UndoLimit="0"
+                         FontSize="12"
+                         />
+            <Grid Grid.Row="1" Margin="20,0,0,15">
+                <ui:Button
+                        Name="StopAllProxies"
+                        Click="StopAllProxies_Click"
+                        Icon="Stop24"
+                        >强制结束所有隧道
+                </ui:Button>
+            </Grid>
+        </Grid>
     </Grid>
 </ui:UiPage>
