--- a/LoCyanFrpDesktop/Dashboard/ProxyList.xaml
+++ b/LoCyanFrpDesktop/Dashboard/ProxyList.xaml
@@ -9,7 +9,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ProxyList">
 
-    <Grid>
+    <Grid Margin="0,0,20,0">
         <Grid.Resources>
             <SolidColorBrush x:Key="BorderColor"/>
         </Grid.Resources>
