--- a/LoCyanFrpDesktop/Dashboard/Status.xaml
+++ b/LoCyanFrpDesktop/Dashboard/Status.xaml
@@ -11,17 +11,23 @@
 
     <Grid >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Margin="20,20,0,15">
+        <Grid Grid.Column="0" Margin="20,20,0,15" Visibility="Visible">
             <Border
                  Grid.Column="1"
                  Margin="0"
                  Padding="10,5"
                  Background="{DynamicResource ControlFillColorDefaultBrush}"
-                 CornerRadius="8">
-                <ListView Name="ProxiesStarted"/>
+                 CornerRadius="8" Width="200">
+                <ListView Name="ProxiesStarted" MouseDown="ProxiesStarted_MouseDown" DataContextChanged="ProxiesStarted_DataContextChanged">
+                    <ListView.ContextMenu>
+                        <ContextMenu>
+                            <ui:MenuItem Header="停止此隧道"/>
+                        </ContextMenu>
+                    </ListView.ContextMenu>
+                </ListView>
             </Border>
         </Grid>
         <Grid Grid.Column="1" >
@@ -40,7 +46,20 @@
                          FontSize="12"
                          />
             <Grid Grid.Row="1" Margin="20,0,0,15">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
                 <ui:Button
+                    Grid.Column="0"
+                    Name="RefreshProxiesList"
+                    Click="RefreshProxiesList_Click"
+                    Icon="ChevronCircleDown24">
+                    刷新已启动隧道列表
+                </ui:Button>
+                <ui:Button
+                    Grid.Column="2"
                         Name="StopAllProxies"
                         Click="StopAllProxies_Click"
                         Icon="Stop24"
